# sim-engine

./: .gitignore  README.md  __init__.py  __main__.py  app.py  config.py  dataset.py  env.py  evaluate.py  ik_controller.py  pyproject.toml  record.py  renderer.py  train.py  viewer.py
assets/: so101_scene.xml
policies/: __init__.py  act_policy.py  base.py  diffusion_policy.py  mlp_policy.py  random_policy.py  scripted_policy.py  smolvla_policy.py
