[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sim-engine"
version = "1.0.0"
description = "MuJoCo-based SO-101 robot arm simulator for learning manipulation policies"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "mujoco>=3.5.0",
    "gymnasium>=1.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "opencv-python>=4.8.0",
    "h5py>=3.9.0",
]

[project.optional-dependencies]
dev = ["diffusers", "transformers", "torchvision"]

[tool.setuptools.packages.find]
include = ["sim_engine*"]

[tool.setuptools.package-data]
sim_engine = ["assets/*.xml"]
